[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/objects/Bench.png" type="Texture" id=1]
[ext_resource path="res://art/objects/Barrel1.png" type="Texture" id=2]
[ext_resource path="res://button/PressurePlate.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 4.5 )

[node name="PressurePlate" type="Node2D"]
script = ExtResource( 3 )
press_duration = 0.1

[node name="Button" type="Sprite" parent="."]
position = Vector2( 7, -9 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 4, 18, 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 1, 1.33333 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -3 )
region_enabled = true
region_rect = Rect2( 0, 25, 32, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 16, -5.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonUp" type="Position2D" parent="."]
visible = false
position = Vector2( 7, -9 )
__meta__ = {
"_edit_lock_": true,
"_gizmo_extents_": 1.0
}

[node name="ButtonDown" type="Position2D" parent="."]
visible = false
position = Vector2( 7, -6 )
__meta__ = {
"_edit_lock_": true,
"_gizmo_extents_": 1.0
}

[node name="Tween" type="Tween" parent="."]

[node name="ReleaseDelay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="body_entered" from="Collision" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Collision" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ReleaseDelay" to="." method="_on_ReleaseDelay_timeout"]
